--- a/warc-proposals.html
+++ b/warc-proposals.html
@@ -92,6 +92,11 @@
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
                 <section>
+                    <h3>WARC Standard Suggestions</h3>
+                    <p>Ilya Kreymer, Webrecorder Lead Developer</p>
+                </section>
+                </section>
+                <section>
                     <h3>WARC Provenance Headers Guidance</h3>
                     <section>
                         <ul>
