--- a/warc-proposals.html
+++ b/warc-proposals.html
@@ -281,8 +281,8 @@ Content-Length: 1698
                 </section>
 
                 <section>
-                    <h3>WARC Extension Usage</h3>
-                    <p>We switched WARC downloads from <b>.warc.gz</b> to <b>.warc</b></p>
+                    <h3>WARC File Extensions</h3>
+                    <p>Webrecorder switched WARC downloads from <b>.warc.gz</b> to <b>.warc</b></p>
                     <section>
                     <ul>
                         <li>Browsers (Safari) uncompress the WARC automatically</li>
@@ -295,7 +295,7 @@ Content-Length: 1698
                     <section>
                         <h4>A Goal? To make WARCs as ubiquitous as PDFs for browsing web content!</h4>
                         <p class="left">WARCs have a .warc extension (regardless of compression)</p>
-                        <p class="left">Users understand that a WARC file contains a web page, represented with .warc extension</p>
+                        <p class="left">Users would understand that a WARC file contains a web page, represented with .warc extension</p>
                         <p class="left">Viewers to open WARC on the desktop (eg. Webrecorder Player)</p>
                         <p class="left">A standard way to specify entrypoints?</p>
                     </section>
