--- a/warc-proposals.html
+++ b/warc-proposals.html
@@ -277,6 +277,7 @@ Content-Length: 1698
                     </section>
                     <section>
                 <p>pywb can be extended to replay such records</p>
+                <p><a href="https://twitter.com/webrecorder_io/status/992176688887820288">(tweet example source)</a></p>
                     </section>
                 </section>
 
