--- a/code4lib.html
+++ b/code4lib.html
@@ -146,12 +146,12 @@
             </section>
 
             <section>
-                <h2>Web archiving != Archiving the entire web!</h2>
+                <h3>Web archiving != Archiving the entire web</h3>
                 <ul>
                     <li class="fragment">Web archives can be small</li>
                     <li class="fragment">Web archives can contain bounded objects</li>
-                    <li class="fragment">Quality over quantity!</li>
-                    <li class="fragment">You can run Webrecorder at your institution today!</li>
+                    <li class="fragment">Quality over quantity</li>
+                    <li class="fragment">You can run Webrecorder at your institution today</li>
                 </ul>
             </section>
 
