--- a/code4lib.html
+++ b/code4lib.html
@@ -144,6 +144,7 @@
 
             <section>
                     <h2><a href="https://webrecorder.io/" target="_blank">Demo!</a></h2>
+                    <h5>Flash ex: <a href="http://www.smithsonianeducation.org/idealabs/collecting/flashdetect.html">Link</a></h5>
             </section>
 
             <section>
