tweaks for sharing

--- a/code4lib.html
+++ b/code4lib.html
@@ -99,8 +99,9 @@
         <div class="slides">
             <section>
                 <h3>Webrecorder: Open Source Web Archiving Toolset</h3>
+                <h4>Code4Lib, 2019</h4>
                 <p style="margin-top: 100px">Ilya Kreymer, Webrecorder Lead Developer</p>
-                <p>@IlyaKreymer</p>
+                <p>@IlyaKreymer @webrecorder_io</p>
             </section>
 
             <section>
@@ -143,8 +144,14 @@
             </section>
 
             <section>
-                    <h2><a href="https://webrecorder.io/" target="_blank">Demo!</a></h2>
-                    <h5>Flash ex: <a href="http://www.smithsonianeducation.org/idealabs/collecting/flashdetect.html">Link</a></h5>
+                    <h2><a href="https://webrecorder.io/" target="_blank">Webrecorder Demo!</a></h2>
+                    <p class="fragment left">Some Example Links:</p>
+                    <ul>
+                    <li class="fragment"><a target="_blank" href="http://www.smithsonianeducation.org/idealabs/collecting/flashdetect.html">Flash Page live</a></li>
+                    <li class="fragment"><a target="_blank" href="https://webrecorder.io/record/$br:firefox:57/http://www.smithsonianeducation.org/idealabs/collecting/flashdetect.html">Flash page in Webrecorder using Firefox 57</a></li>
+                    <li class="fragment"><a target="_blank" href="https://webrecorder.io/record/$br:firefox:57/homestarrunner.com/">Another Flash Example</a></li>
+                    <li class="fragment"><a target="_blank" href="https://webrecorder.io/demo/java/list/bookmarks/b1/20170505193641$br:firefox:49/http://sites.math.rutgers.edu/~sontag/336/brownian-applet.html">Java Applet!</a></li>
+                    </ul>
             </section>
 
             <section>
@@ -302,6 +309,8 @@ google-chrome --proxy-server=http://localhost:8080 https://example.com/
              <section>
                 <h2>Thank you</h2>
                 <h3>Q &amp; A</h3>
+                <br/>
+                <h5>Contact:<br/><a href="mailto:support@webrecorder.io">support@webrecorder.io</a></h5>
             </section>
         </div>
     </div>
