--- a/code4lib.html
+++ b/code4lib.html
@@ -145,7 +145,7 @@
 
             <section>
                     <h2><a href="https://webrecorder.io/" target="_blank">Webrecorder Demo!</a></h2>
-                    <p class="fragment left">Some Example Links:</p>
+                    <p class="fragment">Example Links:</p>
                     <ul>
                     <li class="fragment"><a target="_blank" href="http://www.smithsonianeducation.org/idealabs/collecting/flashdetect.html">Flash Page live</a></li>
                     <li class="fragment"><a target="_blank" href="https://webrecorder.io/record/$br:firefox:57/http://www.smithsonianeducation.org/idealabs/collecting/flashdetect.html">Flash page in Webrecorder using Firefox 57</a></li>
