--- a/csvconf.html
+++ b/csvconf.html
@@ -103,7 +103,8 @@
         <!-- Any section element inside of this container is displayed as a slide -->
         <div class="slides">
             <section>
-                <h3>WARC Files and Beyond: Making sense of web archive data</h3>
+                <h3>WARC Files and Beyond</h3>
+                <h4>Web Archive Data and Tools</h4>
                 <h4>csv,conf,v4</h4>
                 <p style="margin-top: 100px">Ilya Kreymer, Webrecorder Lead Developer</p>
                 <p>@IlyaKreymer @webrecorder_io</p>
@@ -249,10 +250,11 @@ com,example)/?example=1 20140103030321 {"url": "http://example.com?example=1",
                 <h3>Accessing Web Archives -- Replay Rules</h3>
                 <section>
                     <ul>
+                    <li class="fragment">Replay is recreating the captured web page from the WARC</li>
                     <li class="fragment">Replay can be harder than capture!</li>
                     <li class="fragment">Need to match HTTP request to response</li>
                     <li class="fragment">What if there is no exact match?</li>
-                    <li class="fragment">Web Archiving is often a reproducability problem</li>
+                    <li class="fragment">Web Archive replay is sort of a reproducability problem</li>
                     </ul>
                 </section>
                 <section>
