--- a/csvconf.html
+++ b/csvconf.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Webrecorder Open Source Tools</title>
+    <title>WARC Files and Beyond: Web Archiving Data and Tools</title>
 
-    <meta name="description" content="Webrecorder Open Source Tools">
+    <meta name="description" content="WARC Files and Beyond: Web Archiving Data and Tools">
     <meta name="author" content="Ilya Kreymer">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -302,6 +302,7 @@ com,example)/?example=1 20140103030321 {"url": "http://example.com?example=1",
                     <li class="fragment">Other Derivative Datasets</li>
                     <li class="fragment">Organized by Collection</li>
                 </ul>
+                <p class="fragment">Working on a reusable spec/directory structure to include all of these types of data</p>
             </section>
 
             <section>
