--- a/csvconf.html
+++ b/csvconf.html
@@ -162,7 +162,7 @@
             <section id="warcformat1">
                 <h3>WARC Format: Response Record</h3>
                 <ul>
-                    <li class="fragment">WARC file contains or more concatenated records</li>
+                    <li class="fragment">WARC file contains one or more concatenated records</li>
                     <li class="fragment">Each record contains MIME-style WARC headers, followed by HTTP headers, followed by HTTP payload</li>
                     <li class="fragment">HTTP response record, <span class="inline-code">WARC-Type: response</span>
                         <pre class="fragment"><p data-trim style="font-size: smaller">
@@ -320,6 +320,17 @@ com,example)/?example=1 20140103030321 {"url": "http://example.com?example=1",
                     <li class="fragment">FOSS toolset for creating and accessing web archives:</li>
                     <li class="fragment"><a href="https://github.com/webrecorder">https://github.com/webrecorder</a></li>
                     <li class="fragment">Team of six working on Webrecorder, with support from Mellon Foundation</li>
+                </ul>
+            </section>
+
+            <section>
+                <h3>What about the web browser?</h3>
+                <ul>
+                    <li class="fragment">Even if we have all the data, can we still replay it later?</li>
+                    <li class="fragment">Browser features change, become obsolete</li>
+                    <li class="fragment">We can preserve the browser via a Docker image!</li>
+                    <li class="fragment">Can provide versions of browsers with Java, Flash</li>
+                    <li class="fragment"><a target="_blank" href="https://webrecorder.io/demo/java/list/bookmarks/b1/20170505193641$br:firefox:49/http://sites.math.rutgers.edu/~sontag/336/brownian-applet.html">Java Applet!</a></li>
                 </ul>
             </section>
 
