--- a/csvconf.html
+++ b/csvconf.html
@@ -330,6 +330,7 @@ com,example)/?example=1 20140103030321 {"url": "http://example.com?example=1",
                     <li class="fragment">Browser features change, become obsolete</li>
                     <li class="fragment">We can preserve the browser via a Docker image!</li>
                     <li class="fragment">Can provide versions of browsers with Java, Flash</li>
+                    <li class="fragment"><a href="https://faraday.physics.utoronto.ca/GeneralInterest/Harrison/Flash/">Flash examples</a></li>
                     <li class="fragment"><a target="_blank" href="https://webrecorder.io/demo/java/list/bookmarks/b1/20170505193641$br:firefox:49/http://sites.math.rutgers.edu/~sontag/336/brownian-applet.html">Java Applet!</a></li>
                 </ul>
             </section>
