--- a/csvconf.html
+++ b/csvconf.html
@@ -453,6 +453,7 @@ google-chrome --proxy-server=http://localhost:8080 https://example.com/
                 <h2>Thank you</h2>
                 <h3>Q &amp; A</h3>
                 <br/>
+                <h5>Contact:<br/><a href="mailto:ilya.kreymer@rhizome.org">ilya.kreymer@rhizome.org</a></h5>
                 <h5>Contact:<br/><a href="mailto:support@webrecorder.io">support@webrecorder.io</a></h5>
             </section>
         </div>
