--- a/warc-video.html
+++ b/warc-video.html
@@ -96,6 +96,7 @@
                     <p>Ilya Kreymer, Webrecorder Lead Developer</p>
                 </section>
                 <section>
+                    <h3>Video Replay Requirements</h3>
                     <ul>
                         <li>Need mapping from the page replayed to one ore more videos</li>
                         <li>Mapping can be looked up as part of standard CDX lookup</li>
@@ -103,6 +104,7 @@
                     </ul>
                 </section>
                 <section>
+                    <h3>Video Replay Requirements</h3>
                     <p>Example mapping:</p>
 <pre>
 WARC/1.0
