--- a/warc-video.html
+++ b/warc-video.html
@@ -133,7 +133,7 @@ WARC-Target-URI: <b>urn:transclusions:http://example.com/</b>
             <section>
                 <h3>Lookup videos during replay</h3>
 
-                <p class="fragment">AJAX request to <b>/webarchive/urn:transclusions:http://example.com/watch_video.html</b>
+                <p class="fragment">AJAX request to <b>/webarchive/20190606/urn:transclusions:http://example.com/watch_video.html</b>
 
                 <p class="fragment">Using mapping JSON:</p>
 <pre class="fragment">
