--- a/warc-video.html
+++ b/warc-video.html
@@ -242,7 +242,7 @@ WARC-Target-URI: http://example.com/media/video_file.flv.webm
   "creation_timestamp": "20190301",
 }
 </pre>
-                       <li class="fragment"><a href="https://github.com/webrecorder/warcit/blob/video-conversion/conversions-and-transclusions.md#proposal-multiple-transcluded-objects-per-page">More suggestions in video on github doc</a></li>
+                       <li class="fragment"><a href="https://github.com/webrecorder/warcit/blob/video-conversion/conversions-and-transclusions.md#proposal-multiple-transcluded-objects-per-page">(More suggestions in doc on github)</a></li>
                     </ul>
                 </section>
             </div>
