--- a/warc-video.html
+++ b/warc-video.html
@@ -250,6 +250,7 @@ WARC-Target-URI: http://example.com/media/video_file.flv.webm
 
     <!-- Footer -->
     <div style="position:absolute; bottom:1%; left:2%; width:100%; vertical-align: middle">
+        <a href="https://webrecorder.io/"><img style="vertical-align: middle; width: auto; height: 90px" src="img/webrecorder-logo-vector.svg"></a>
     </div>
 
     <script src="lib/js/head.min.js"></script>
