tweaks to warc-video

--- a/warc-video.html
+++ b/warc-video.html
@@ -93,6 +93,7 @@
             <div class="slides">
                 <section>
                     <h3>WARC Video Metadata Proposal</h3>
+                    <h4>IIPC WARC Workshop, 2019</h4>
                     <p>Ilya Kreymer, Webrecorder Lead Developer</p>
                 </section>
                 <section>
