--- a/warc-video.html
+++ b/warc-video.html
@@ -186,7 +186,7 @@ WARC-Target-URI: <b>urn:transclusions:http://example.com/</b>
                 <section>
                    <h4>For videos captured in other ways...</h4>
                    <ul>
-                     <li class="fragment">warcit provides a way to generate the JSON metadata</li>
+                     <li class="fragment"><a href="https://github.com/webrecorder/warcit">warcit</a>provides a way to generate the JSON metadata</li>
                      <li class="fragment">warcit also provides a way to convert videos to web formats</li>
                      <li class="fragment">Generates WARC conversion records</li>
                      <li class="fragment"><a href="https://github.com/webrecorder/warcit/blob/video-conversion/conversions-and-transclusions.md">More Info</a></li>
