--- a/warc-video.html
+++ b/warc-video.html
@@ -179,14 +179,15 @@ WARC-Target-URI: <b>urn:transclusions:http://example.com/</b>
                     <li class="fragment">Not really standardized</li>
                     <li class="fragment">No CSS selectors, support for multiple videos</li>
                     <li class="fragment">pywb supports lookup of youtube-dl JSON metadata records, using <b>metadata://example.com/watch_page.html</b></li>
-                    <li class="fragment">Not standradized</li>
+                    <li class="fragment">Not standradized either</li>
+                    <li class="fragment">Need standard/best practice around this format beyond youtube-dl</li>
                   </ul>
                 </section>
 
                 <section>
                    <h4>For videos captured in other ways...</h4>
                    <ul>
-                     <li class="fragment"><a href="https://github.com/webrecorder/warcit">warcit</a>provides a way to generate the JSON metadata</li>
+                     <li class="fragment"><a href="https://github.com/webrecorder/warcit">warcit</a>&nbsp;provides a way to generate the JSON metadata</li>
                      <li class="fragment">warcit also provides a way to convert videos to web formats</li>
                      <li class="fragment">Generates WARC conversion records</li>
                      <li class="fragment"><a href="https://github.com/webrecorder/warcit/blob/video-conversion/conversions-and-transclusions.md">More Info</a></li>
